--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -83,5 +83,5 @@ h4,
 h5,
 h6 {
   font-family:
-    "Satoshi-Variable", var(--font-satoshi), "Satoshi", "SF Pro", system-ui, arial, sans-serif !important;
+    "Satoshi-Variable", var(--font-satoshi), "Satoshi", "SF Pro", system-ui, arial, sans-serif;
 }
